--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -105,7 +105,7 @@ h3 {
 
 #logo {
   float: left;
-  width: 250px;
+  padding:0 20px;
   height: 90px;
   font-family: Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
@@ -154,7 +154,6 @@ footer {
 .sidebar {
   float: right;
   width: 100%;
-  max-width: 270px;
   padding: 30px;
   margin-bottom: 20px;
   background: #fff;
@@ -184,7 +183,6 @@ h3,
 .main-section {
   float: left;
   width: 100%;
-  max-width: 650px;
   padding: 30px;
   margin: 0 0 40px;
   background: #fff;
@@ -234,4 +232,161 @@ input[type=submit] {
   cursor: pointer;
   background: #4aaaa5;
   border: 0 none;
+}
+.twelve-lg {
+  width:100%
+}
+.eleven-lg {
+  width: 91.666666%
+}
+.ten-lg {
+  width: 83.333333%;
+}
+.nine-lg {
+  width:75%;
+}
+.eight-lg {
+  width: 66.666666%;
+}
+.seven-lg {
+  width: 58.333333;
+}
+.six-lg {
+  width: 50%;
+}
+.five-lg {
+  width: 41.666666%;
+}
+.four-lg {
+  width: 33.333333%;
+}
+.three-lg {
+  width: 25%;
+}
+.two-lg {
+  width: 16.666666%;
+}
+.one-lg {
+  width: 8.333333;
+}
+@media screen and (max-width: 980px) {
+  .twelve-md {
+    width:100%
+  }
+  .eleven-md {
+    width: 91.666666%
+  }
+  .ten-md {
+    width: 83.333333%;
+  }
+  .nine-md {
+    width:75%;
+  }
+  .eight-md {
+    width: 66.666666%;
+  }
+  .seven-md {
+    width: 58.333333;
+  }
+  .six-md {
+    width: 50%;
+  }
+  .five-md {
+    width: 41.666666%;
+  }
+  .four-md {
+    width: 33.333333%;
+  }
+  .three-md {
+    width: 25%;
+  }
+  .two-md {
+    width: 16.666666%;
+  }
+  .one-md {
+    width: 8.333333;
+  }
+}
+@media screen and (max-width: 768px) {
+  .twelve-sm {
+    width:100%
+  }
+  .eleven-sm {
+    width: 91.666666%
+  }
+  .ten-sm {
+    width: 83.333333%;
+  }
+  .nine-sm {
+    width:75%;
+  }
+  .eight-sm {
+    width: 66.666666%;
+  }
+  .seven-sm {
+    width: 58.333333;
+  }
+  .six-sm {
+    width: 50%;
+  }
+  .five-sm {
+    width: 41.666666%;
+  }
+  .four-sm {
+    width: 33.333333%;
+  }
+  .three-sm {
+    width: 25%;
+  }
+  .two-sm {
+    width: 16.666666%;
+  }
+  .one-sm {
+    width: 8.333333;
+  }
+}
+@media screen and (max-width: 640px) {
+  .twelve-xs {
+    width:100%
+  }
+  .eleven-xs {
+    width: 91.666666%
+  }
+  .ten-xs {
+    width: 83.333333%;
+  }
+  .nine-xs {
+    width:75%;
+  }
+  .eight-xs {
+    width: 66.666666%;
+  }
+  .seven-xs {
+    width: 58.333333;
+  }
+  .six-xs {
+    width: 50%;
+  }
+  .five-xs {
+    width: 41.666666%;
+  }
+  .four-xs {
+    width: 33.333333%;
+  }
+  .three-xs {
+    width: 25%;
+  }
+  .two-xs {
+    width: 16.666666%;
+  }
+  .one-xs {
+    width: 8.333333;
+  }
+  nav {
+    text-align: center;
+  }
+  nav a {
+    padding: 0 30px;
+    margin-bottom: 25px;
+  }
 }
